tests/error/stray.gw
// [contains but stdout ] stray in program
**µ
